<resources>
    <string name="app_name">RideTogether</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="create_event">Create event</string>
    <string name="create_route">Route</string>
    <string name="profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="route_type">Route Type</string>

    <string name="add_image">Add Image</string>

    <string name="email_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>

    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>

    <string name="participants">PARTICIPANTS</string>
    <string name="subscribers">SUBSCRIBERS</string>
    <string name="title_activity_maps">Map</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="drag_route_info">DETAILED INFO</string>

    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="invalid_item">Invalid list item</string>
    <string name="mixed">Mixed</string>
    <string name="off_road">Off-road</string>
    <string name="sand">Sand</string>
    <string name="gravel">Gravel</string>
    <string name="asphalt">Asphalt</string>
</resources>
