<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:padding="@dimen/default_padding_large"
            android:gravity="center">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/default_margin_large">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:typeface="serif"
                        android:text="@string/app_name"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/title_text_size"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true"
                    android:textColorHighlight="@color/primary"
                    android:layout_marginBottom="@dimen/default_margin_medium"/>
            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/password_hint"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@color/primary"
                    android:layout_marginBottom="@dimen/default_margin_large"
                    android:inputType="textPassword"/>

            <Button
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_dark"
                    android:background="@color/button_background"
                    android:layout_marginBottom="@dimen/default_margin_medium"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/forgot_password"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/create_account"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>