<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_route_creation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding_large"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/default_margin_medium"
            xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_medium"
                android:singleLine="true"
                android:hint="@string/title"/>

        <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>

        <Button
                android:id="@+id/button_route_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_medium"
                android:text="@string/route_type"
                android:gravity="start|center_vertical"
                android:padding="@dimen/default_padding"
                android:background="@color/window_background"/>

        <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin_medium"
                android:inputType="textMultiLine"
                android:hint="@string/description"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:minLines="6"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/submit_route_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_google_maps3"
            android:layout_margin="@dimen/fab_margin"/>
</android.support.design.widget.CoordinatorLayout>
