<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_event_creation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar_create_event"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_size"
                android:background="@color/primary"
                android:minHeight="?attr/actionBarSize"
                style="@style/ToolbarStyle">
            <EditText
                    android:id="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_large_material"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:background="@android:color/transparent"
                    android:hint="@string/title">
                    <requestFocus/>
            </EditText>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/default_margin_medium">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:src="@drawable/ic_action_query_builder"/>
                <TextView
                        android:id="@+id/event_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:textColor="@color/material_blue_grey_800"
                        android:text="29.03.1437 14:37"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin">
                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:src="@drawable/ic_image_camera_alt"/>
                <TextView
                        android:id="@+id/event_add_image"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:textColor="@color/material_blue_grey_800"
                        android:text="@string/add_image"/>
            </LinearLayout>

            <EditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/material_blue_grey_900"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/default_margin_large"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:hint="@string/description"/>
        </LinearLayout>

    </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>